Add missing Advancements and command log Remove a few debug lines

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ archives_base_name=dcintegration-fabric
 fabric_version=0.41.0+1.17
 
 mod_version=2.3.5
-changelog=Fabric port :)
+changelog=Fabric port :)\nSome stuff might be still missing, please report thoose
 releaseType = BETA
