--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     modImplementation "me.bymartrixx.player-events:api:2.1.3"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:DiscordIntegration-Core:bf9dc446')
+    modImplementation include('de.erdbeerbaerlp:DiscordIntegration-Core:ce44c82e')
 
 }
 
@@ -93,8 +93,10 @@ curseforge {
             mainArtifact(remapJar) {
                 displayName = "DiscordIntegration-Fabric $version (MC 1.17)"
             }
-            //relations {
-            //}
+            relations {
+                requiredDependency 'fabric-api'
+                requiredDependency 'player-events'
+            }
         }
     }
 }
