--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.63
-loader_version=0.12.3
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
 archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.41.0+1.17
+fabric_version=0.43.1+1.18
 
 mod_version=2.3.5
-changelog=Fabric port :)\nSome stuff might be still missing, please report thoose
+changelog=Update to 1.18\nUse the 1.17 Player API version
 releaseType = BETA
