--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     // Player Events API
     modImplementation "me.bymartrixx.player-events:api:2.1.3"
-    modImplementation "maven.modrinth:styled-chat:1.2.2+1.18"
+    modCompileOnly "maven.modrinth:styled-chat:1.2.2+1.18"
 
     // =========  Common  =====================
     modImplementation include('de.erdbeerbaerlp:DiscordIntegration-Core:ce44c82e')
