--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
+loader_version=0.13.3
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
 archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.43.1+1.18
+fabric_version=0.51.1+1.18.2
 
-mod_version=2.3.5
-changelog=Update to 1.18\nUse the 1.17 Player API version
+mod_version=2.4.1
+changelog=ALPHA Version, expect bugs!\nMany many bug fixes, Moved localization config to different file, Enforce role in whitelist mode Fix config not generating when file not exists\nUpdate to 1.18.2
 releaseType = BETA
