Fix release type

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ fabric_version=0.51.1+1.18.2
 
 mod_version=2.4.1
 changelog=ALPHA Version, expect bugs!\nMany many bug fixes, Moved localization config to different file, Enforce role in whitelist mode Fix config not generating when file not exists\nUpdate to 1.18.2
-releaseType = BETA
+releaseType = ALPHA
