Fix messages file not generated

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@ archives_base_name=dcintegration-fabric
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.51.1+1.18.2
 
-mod_version=2.4.1
-changelog=ALPHA Version, expect bugs!\nMany many bug fixes, Moved localization config to different file, Enforce role in whitelist mode Fix config not generating when file not exists\nUpdate to 1.18.2
+mod_version=2.4.2
+changelog=ALPHA Version, expect bugs!\nFix messages file not generated
 releaseType = ALPHA
