--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.matthewprenger.cursegradle" version "1.4.0"
-    id 'fabric-loom' version '0.10-SNAPSHOT'
-    id "com.modrinth.minotaur" version "1.2.1"
+    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id "com.modrinth.minotaur" version "2.1.2"
 }
 
 version = project.mod_version
@@ -39,11 +39,11 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // Player Events API
-    modImplementation "me.bymartrixx.player-events:api:2.1.3"
-    modCompileOnly "maven.modrinth:styled-chat:1.2.2+1.18"
+    modImplementation "me.bymartrixx.player-events:api:2.3.1"
+    modCompileOnly "maven.modrinth:styled-chat:1.3.2+1.19"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.4.2') {
+    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.4.5') {
         changing = true
     }
 
@@ -59,7 +59,7 @@ processResources {
     }
 }
 
-def targetJavaVersion = 16
+def targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
     // ensure that the encoding is set to UTF-8, no matter what the system default is
     // this fixes some edge cases with special characters not displaying correctly
@@ -83,7 +83,7 @@ java {
 }
 
 remapJar{
-    classifier = "1.18"
+    classifier = "1.19"
 }
 
 jar {
@@ -100,9 +100,9 @@ curseforge {
             id = '493679'
             changelog = project.changelog
             releaseType = project.releaseType.toLowerCase()
-            addGameVersion '1.18.2'
+            addGameVersion '1.19'
             mainArtifact(remapJar) {
-                displayName = "DiscordIntegration-Fabric $version (MC 1.18.2)"
+                displayName = "DiscordIntegration-Fabric $version (MC 1.19)"
             }
             relations {
                 requiredDependency 'fabric-api'
@@ -111,23 +111,19 @@ curseforge {
         }
     }
 }
-import com.modrinth.minotaur.TaskModrinthUpload
-
-task publishModrinth (type: TaskModrinthUpload){
-
+modrinth{
     if (project.hasProperty('modrinth.apikey')) { // $GRADLE_USER_HOME/gradle.properties
         token = getProperty("modrinth.apikey") // Use an environment property!
         projectId = 'rbJ7eS5V'
-        versionNumber = version+"-fabric-1.18.2"
-        versionName = "DiscordIntegration-Fabric $version (MC 1.18.2)"
+        versionNumber = version+"-${project.minecraft_version}"
+        versionName = "DiscordIntegration-Fabric $version (MC ${project.minecraft_version})"
         uploadFile = remapJar
         changelog = project.changelog
-        addGameVersion('1.18.2')
-        addLoader('fabric')
+        gameVersions = ["${project.minecraft_version}"]
+        loaders = ['fabric']
         versionType = project.releaseType.toUpperCase()
     }
 }
-
-tasks.release.dependsOn(tasks.build, tasks.curseforge,tasks.publishModrinth)
+tasks.release.dependsOn(tasks.build, tasks.curseforge,tasks.modrinth)
 
 
