--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.13.3
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
+
+fabric_version=0.56.0+1.19
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
 archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.51.1+1.18.2
 
-mod_version=2.4.2
-changelog=ALPHA Version, expect bugs!\nFix messages file not generated
+mod_version=2.4.5
+changelog=ALPHA Version, expect bugs!\nUpdate to 1.19
 releaseType = ALPHA
