Update to 1.19.1 Fix StyledChat compatibility No longer depending on PlayerEvents API

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,19 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
+minecraft_version=1.19.1
+yarn_mappings=1.19.1+build.1
 loader_version=0.14.8
 
-fabric_version=0.56.0+1.19
+#Fabric api
+fabric_version=0.58.5+1.19.1
+
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
 archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=2.4.5
-changelog=ALPHA Version, expect bugs!\nUpdate to 1.19
-releaseType = ALPHA
+mod_version=2.4.6
+changelog=Update to 1.19.1\nFix StyledChat compatibility\nNo longer depending on PlayerEvents API
+releaseType = BETA
