--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
+    maven { url "https://maven.nucleoid.xyz/" }
 }
 task release{
 
@@ -38,12 +39,11 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // Player Events API
-    modImplementation "me.bymartrixx.player-events:api:2.3.1"
-    modCompileOnly "maven.modrinth:styled-chat:1.3.2+1.19"
+    modImplementation include("eu.pb4:placeholder-api:2.0.0-beta.7+1.19")
+    modCompileOnly "maven.modrinth:styled-chat:1.4.0+1.19.1"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.4.5') {
+    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.4.6') {
         changing = true
     }
 
@@ -83,7 +83,7 @@ java {
 }
 
 remapJar{
-    classifier = "1.19"
+    classifier = project.minecraft_version
 }
 
 jar {
@@ -100,13 +100,13 @@ curseforge {
             id = '493679'
             changelog = project.changelog
             releaseType = project.releaseType.toLowerCase()
-            addGameVersion '1.19'
+            addGameVersion '1.19.1'
             mainArtifact(remapJar) {
-                displayName = "DiscordIntegration-Fabric $version (MC 1.19)"
+                displayName = "DiscordIntegration-Fabric $version (MC ${project.minecraft_version})"
             }
             relations {
                 requiredDependency 'fabric-api'
-                requiredDependency 'player-events'
+                tool 'no-chat-reports'
             }
         }
     }
@@ -121,6 +121,10 @@ modrinth{
         changelog = project.changelog
         gameVersions = ["${project.minecraft_version}"]
         loaders = ['fabric']
+        dependencies {
+            required.project "fabric-api"
+            optional.project "no-chat-reports"
+        }
         versionType = project.releaseType.toUpperCase()
     }
 }
