--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ curseforge {
         }
     }
 }
+import com.modrinth.minotaur.dependencies.ModDependency
 modrinth{
     if (project.hasProperty('modrinth.apikey')) { // $GRADLE_USER_HOME/gradle.properties
         token = getProperty("modrinth.apikey") // Use an environment property!
@@ -122,8 +123,8 @@ modrinth{
         gameVersions = ["${project.minecraft_version}"]
         loaders = ['fabric']
         dependencies {
-            required.project "fabric-api"
-            optional.project "no-chat-reports"
+            new ModDependency("P7dR8mSH", 'required')
+            new ModDependency("qQyHxfxd", 'optional')
         }
         versionType = project.releaseType.toUpperCase()
     }
