--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id 'fabric-loom' version '0.12-SNAPSHOT'
-    id "com.modrinth.minotaur" version "2.1.2"
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 version = project.mod_version
@@ -111,7 +111,6 @@ curseforge {
         }
     }
 }
-import com.modrinth.minotaur.dependencies.ModDependency
 modrinth{
     if (project.hasProperty('modrinth.apikey')) { // $GRADLE_USER_HOME/gradle.properties
         token = getProperty("modrinth.apikey") // Use an environment property!
@@ -123,9 +122,10 @@ modrinth{
         gameVersions = ["${project.minecraft_version}"]
         loaders = ['fabric']
         dependencies {
-            new ModDependency("P7dR8mSH", 'required')
-            new ModDependency("qQyHxfxd", 'optional')
+            required.project "fabric-api"
+            optional.project "no-chat-reports"
         }
+
         versionType = project.releaseType.toUpperCase()
     }
 }
