--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=2.4.6
-changelog=Update to 1.19.1\nFix StyledChat compatibility\nNo longer depending on PlayerEvents API
-releaseType = BETA
+mod_version=2.4.7
+changelog=Fix for next discord update
+releaseType = RELEASE
