--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.1
-yarn_mappings=1.19.1+build.1
-loader_version=0.14.8
-
-#Fabric api
-fabric_version=0.58.5+1.19.1
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.10
+fabric_version=0.64.0+1.19.2
 
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
@@ -15,6 +13,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=2.4.7
-changelog=Fix for next discord update
-releaseType = RELEASE
+mod_version=2.5.0
+changelog=Fix a few issues\nAdd new custom command parameter\nFix default webhook name\nBump minimum Forge version to 40.1.0\nFix mentions in webhooks\nFix mentions in any non-chat message\nRemove /discord stop and /discord restart ingame commands
+releaseType = BETA
