--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "com.matthewprenger.cursegradle" version "1.4.0"
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'fabric-loom' version '1.0-SNAPSHOT'
     id "com.modrinth.minotaur" version "2.+"
 }
 
@@ -43,11 +43,11 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("eu.pb4:placeholder-api:2.0.0-beta.7+1.19")
-    modCompileOnly "maven.modrinth:styled-chat:1.4.0+1.19.1"
+    modImplementation include("eu.pb4:placeholder-api:2.0.0-pre.1+1.19.2")
+    modCompileOnly "maven.modrinth:styled-chat:2.0.1+1.19.2"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.4.7-SNAPSHOT') {
+    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.5.0') {
         changing = true
     }
 
