--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.4
 loader_version=0.14.10
-fabric_version=0.64.0+1.19.2
+
+#Fabric api
+fabric_version=0.59.1+1.18.2
 
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
@@ -14,5 +16,5 @@ archives_base_name=dcintegration-fabric
 # check this on https://modmuss50.me/fabric.html
 
 mod_version=2.5.0
-changelog=Fix a few issues\nAdd new custom command parameter\nFix default webhook name\nBump minimum Forge version to 40.1.0\nFix mentions in webhooks\nFix mentions in any non-chat message\nRemove /discord stop and /discord restart ingame commands
+changelog=Backported 2.5.0 to 1.18.2
 releaseType = BETA
