Update to 2.6.0, see gradle.properties for changelog

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.10
-fabric_version=0.64.0+1.19.2
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.3
+loader_version=0.14.11
+fabric_version=0.69.1+1.19.3
+
 
 # Mod Properties
 maven_group=de.erdbeerbaerlp.dcintegration.fabric
@@ -13,6 +14,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=2.5.0
-changelog=Fix a few issues\nAdd new custom command parameter\nFix default webhook name\nBump minimum Forge version to 40.1.0\nFix mentions in webhooks\nFix mentions in any non-chat message\nRemove /discord stop and /discord restart ingame commands
-releaseType = BETA
+mod_version=2.6.0
+changelog=ALPHA BUILD, Expect bugs\n\nImplemented Global Linking\nLinking now works with Databases\nFixed a few smaller issues
+releaseType = ALPHA
