--- a/build.gradle
+++ b/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("eu.pb4:placeholder-api:2.0.0-pre.1+1.19.2")
-    modCompileOnly "maven.modrinth:styled-chat:2.0.1+1.19.2"
+    modImplementation include("eu.pb4:placeholder-api:2.0.0-pre.2+1.19.3")
+    modCompileOnly "maven.modrinth:styled-chat:2.1.0+1.19.3"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.5.0') {
+    modImplementation include('de.erdbeerbaerlp:dcintegration.common:2.6.0') {
         changing = true
     }
 
@@ -104,7 +104,7 @@ curseforge {
             id = '493679'
             changelog = project.changelog
             releaseType = project.releaseType.toLowerCase()
-            addGameVersion '1.19.1'
+            addGameVersion "${project.minecraft_version}"
             mainArtifact(remapJar) {
                 displayName = "DiscordIntegration-Fabric $version (MC ${project.minecraft_version})"
             }
