--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.3
-loader_version=0.14.11
-fabric_version=0.69.1+1.19.3
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.2
+loader_version=0.14.21
+
+#Fabric api
+fabric_version=0.83.1+1.20.1
 
 
 # Mod Properties
@@ -14,6 +16,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=2.6.2
-changelog=ALPHA BUILD, Expect bugs\n\nImplemented Global Linking\nLinking now works with Databases\nFixed a few smaller issues
-releaseType = ALPHA
+mod_version=3.0.0
+changelog=Rewrite of the mod to fix lots of bugs
+releaseType = BETA
