Update to 3.0.1, add possible fix for styledchat dms

--- a/build.gradle
+++ b/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("eu.pb4:placeholder-api:2.0.0-pre.2+1.19.3")
-    modCompileOnly "maven.modrinth:styled-chat:2.1.0+1.19.3"
+    modImplementation include("eu.pb4:placeholder-api:2.1.2+1.20.1")
+    modCompileOnly "maven.modrinth:styled-chat:2.2.2+1.20.1"
 
     // =========  Common  =====================
-    modImplementation include('de.erdbeerbaerlp:dcintegration.common:3.0.0-SNAPSHOT') {
+    modImplementation include('de.erdbeerbaerlp:dcintegration.common:3.0.1') {
         changing = true
     }
 
