--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.0
-changelog=Rewrite of the mod to fix lots of bugs
-releaseType = BETA
+mod_version=3.0.1
+changelog=Large discord integration rewrite adding new features and fixing long existing bugs\nOld configuration can be used as-is
+releaseType = ALPHA
