--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.1
-changelog=Large discord integration rewrite adding new features and fixing long existing bugs\nOld configuration can be used as-is
+mod_version=3.0.2
+changelog=Large discord integration rewrite adding new features and fixing long existing bugs Old configuration can be used as-is\n\nFixed linking not being saved\nOptimized code
 releaseType = ALPHA
