--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.1
-changelog=Large discord integration rewrite adding new features and fixing long existing bugs\nOld configuration can be used as-is
+mod_version=3.0.2
+changelog=Large discord integration rewrite adding new features and fixing long existing bugs Old configuration can be used as-is\n\nFixed linking not being saved\nOptimized code\n\nNOTE: This version may contain lots of console spam
 releaseType = ALPHA
