--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.3
-changelog=Large discord integration rewrite adding new features and fixing long existing bugs Old configuration can be used as-is\n\nAdded custom status\nAdded tellraw\nAdded option to disable chat message editing for compatibility reasons\nFixed lots of bugs
+mod_version=3.0.5
+changelog="Fix server stopping not working\nFix update checker\nImplement URL Encoded advancement message\nImplement permissions"
 releaseType = BETA
