--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ archives_base_name=dcintegration-fabric
 # check this on https://modmuss50.me/fabric.html
 
 mod_version=3.0.5
-changelog="Fix server stopping not working\nFix update checker\nImplement URL Encoded advancement message\nImplement permissions"
+changelog=Fix server stopping not working\nFix update checker\nImplement URL Encoded advancement message\nImplement permissions
 releaseType = BETA
