--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "com.matthewprenger.cursegradle" version "1.4.0"
-    id 'fabric-loom' version '1.0-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id "com.modrinth.minotaur" version "2.+"
 }
 
@@ -43,8 +43,8 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("eu.pb4:placeholder-api:2.2.0+1.20.2")
-    modCompileOnly "maven.modrinth:styled-chat:2.3.0+1.20.2"
+    modImplementation include("eu.pb4:placeholder-api:2.3.0+1.20.3")
+    modCompileOnly "maven.modrinth:styled-chat:2.4.0+1.20.3"
 
     // =========  Common  =====================
     modImplementation include('de.erdbeerbaerlp:dcintegration.common:3.0.5') {
@@ -89,7 +89,7 @@ java {
 }
 
 remapJar{
-    classifier = project.minecraft_version
+	archiveClassifier.set("${project.minecraft_version}")
 }
 
 jar {
