--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Increase it even more, 1G is not enough anymore
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.4
@@ -16,6 +17,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.5
-changelog="Fix server stopping not working\nFix update checker\nImplement URL Encoded advancement message\nImplement permissions"
-releaseType = BETA
+mod_version=3.0.6
+changelog="Implemented a few bug fixes\nAdd more events for addon developers"
+releaseType = RELEASE
