--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.2
+
+minecraft_version=24w14potato
+yarn_mappings=24w14potato+build.1
+loader_version=0.15.8
 
 #Fabric api
-fabric_version=0.91.3+1.20.4
+fabric_version=0.96.13+1.20.5
 
 
 # Mod Properties
