--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.2
+minecraft_version=1.21
+yarn_mappings=1.21+build.1
+loader_version=0.15.11
 
-#Fabric api
-fabric_version=0.97.6+1.20.6
+# Fabric API
+fabric_version=0.100.1+1.21
 
 
 # Mod Properties
@@ -18,5 +18,5 @@ archives_base_name=dcintegration-fabric
 # check this on https://modmuss50.me/fabric.html
 
 mod_version=3.0.7
-changelog="1.20.6 port"
-releaseType = RELEASE
+changelog="1.21 port, untested!"
+releaseType = BETA
