--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ archives_base_name=dcintegration-fabric
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 
-mod_version=3.0.7.1
-changelog="1.21 port, untested!\nFixed mc version"
-releaseType = BETA
+mod_version=3.0.7.2
+changelog="Fixed mixin, causing error on join"
+releaseType = RELEAES
