Fix typo (again)

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ archives_base_name=dcintegration-fabric
 
 mod_version=3.0.7.2
 changelog="Fixed mixin, causing error on join"
-releaseType = RELEAE
+releaseType = RELEASE
